# play-c

./: .gitignore  CMakeLists.txt  README.md  guess_number.c  main.c  pointer_operations.c  pointer_parameter_as_return_value.c  readonly_pointer.c  recursion.c
src/: main.c
src/algorithm/: CMakeLists.txt  factorial.c  factorial.h  fibonacci.h  quick_sort.c  quick_sort.h
src/data/: io_util.h
src/data_structure/: CMakeLists.txt  linked_list.c  linked_list.h  main.c
src/files/: CMakeLists.txt  main.c
src/files/include/: time_util.h
src/hello/: CMakeLists.txt  main.c
src/include/: CMakeLists.txt  io_util.h
src/io_util/: CMakeLists.txt  io_util.c
src/memory/: CMakeLists.txt  main.c
src/pointer/: CMakeLists.txt  main.c  pointer_operations.c  pointer_parameter_as_return_value.c  pointer_parameter_as_return_value.h  readonly_pointer.c
src/pointer/include/: pointer_operations.h  readonly_pointer.h
src/pointer/lib/: pointer_operations.c  pointer_parameter_as_return_value.c  readonly_pointer.c
src/puzzle/: CMakeLists.txt  calculator.c  calculator.h  guess_number.c  guess_number.h  hanoi.c  hanoi.h  main.c
src/string/: CMakeLists.txt  main.c
src/time/: CMakeLists.txt  main.c
src/types/: CMakeLists.txt  main.c
